...
  const [followedUsers, setFollowedUsers] = useState({});
  const [userAvatarUrl, setUserAvatarUrl] = useState('');
  const [followedSuggestions, setFollowedSuggestions] = useState({});
  const [searchText, setSearchText] = useState('');
  const [userInstitution, setUserInstitution] = useState('RV College of Engineering');
  const [userName, setUserName] = useState('RVCE Alumni Affairs Admin');
  const [userRole, setUserRole] = useState('Admin');
  const [userDepartment, setUserDepartment] = useState('Alumni Affairs');
  const [userInitials, setUserInitials] = useState('RV');


  // Modal States
  const [activeModal, setActiveModal] = useState(null);
...

          {/* Center – Search bar */}
          <View style={styles.searchBar}>
            <Ionicons name="search-outline" size={18} color="#94A3B8" style={{ marginRight: 6 }} />
            <TextInput
              style={styles.searchInput}
              placeholder="Search"
              placeholderTextColor="#94A3B8"
              value={searchText}
              onChangeText={setSearchText}
            />
          </View>

...
